# NppAIAssistant

./: .gitignore  CMakeLists.txt  NppAIAssistant.vcxproj  PROJECT_STRUCTURE.md  README.md  README_zh-TW.md  plugin-admin-metadata.json
.github/workflows/: CI_build.yml
docs/: GITHUB_RELEASE_TEMPLATE.md  NPP_PLUGINLIST_PR_TEMPLATE.md  PLUGIN_ADMIN_SUBMISSION.md  USAGE.md
scripts/: install-npp-ai-plugin.ps1  package-npp-ai-plugin.ps1
src/: NppAIAssistant.cpp  NppAIAssistantResources.h  NppAIAssistantResources.rc  NppAIAssistantVersion.h
src/shared/: HttpClient.cpp  HttpClient.h  LLMApiClient.cpp  LLMApiClient.h  SecureStorage.cpp  SecureStorage.h
